# Merlions-Agents-GHCP

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
assets/: slides.md
src/merlions/: __init__.py  cli.py  governance.py  llm.py  models.py  reliability.py  telemetry.py
src/merlions/agents/: hawker.py  haze.py  router.py  wisecracker.py
src/merlions/evals/: __init__.py  __main__.py  cases.jsonl  from_traces.py  runner.py
src/merlions/policies/: hawker.yaml  haze.yaml  router.yaml  wisecracker.yaml
src/merlions/tools/: __init__.py  find_stalls.py  maps.py  menu_index.py  nea.py
talk/: context.md  cue-card.md  demo-scripts.md  plan.md  speaker-notes.md
talk/chapters/: 01-title.md  02-agenda.md  03-agents.md  04-multiagent.md  05-github-copilot.md  06-trust.md  07-demo-copilot.md  08-hawker-agent.md  09-haze-agent.md  10-wisecracker-agent.md  11-azure-deploy.md  12-observe.md  13-call-to-action.md  README.md
talk/demos/: README.md  RECORDING.md  demo1-before.md  demo1.ps1  demo2.ps1  demo3.ps1
tests/: conftest.py  test_find_stalls.py  test_governance.py  test_haze.py  test_llm.py  test_reliability.py  test_router.py
