[project]
name = "merlions"
version = "0.1.0"
description = "Trustworthy multi-agent Python on Azure — Singapore-flavoured demo for the Merlions, Agents & Copilot talk."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
merlions = "merlions.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/merlions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
